# 42sh

./: 42sh.man  CMakeLists.txt  Makefile  Manual  README.md  TODO  clean_directory.sh  command  file.ini  grammaire.txt  graph.dot  graph.dot.dot  hashtable.c  ko.sh  manual.man  notre  requirements.txt  script.sh
doc/: Doxyfile
doc/doc/html/: index.html
doc/html/: annotated.html  ast_8c.html  ast_8h_source.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_e1aa690b4af0a0538ec65649b0390051.html  exe_8h_source.html  execute_8c.html  execute_8h_source.html  extract_8h_source.html  files.html  globals.html  globals_func.html  hashmap_8h_source.html  index.html  opt-parser_8h_source.html  parser_8c.html  parser_8h_source.html  print__ast_8h_source.html  structast__node__and__or.html  structast__node__assignement__word.html  structast__node__case__clause.html  structast__node__case__item.html  structast__node__command.html  structast__node__compound__list.html  structast__node__do__group.html  structast__node__element.html  structast__node__else__clause.html  structast__node__funcdec.html  structast__node__input.html  structast__node__list.html  structast__node__pipeline.html  structast__node__prefix.html  structast__node__redirection.html  structast__node__rule__case.html  structast__node__rule__for.html  structast__node__rule__if.html  structast__node__rule__until.html  structast__node__rule__while.html  structast__node__shell__command.html  (+12 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  (+11 more)
env/local/: bin  include  lib
src/: #ast.c#  #parser.c#  :  CMakeLists.txt  Makefile  a.out  ast.c  ast.h  command  exe.h  exec.c  execc.c  execute.c  execute.h  extract.c  extract.h  gg.c  hashmap.c  hashmap.h  ini.c  notes  opt-parser.c  opt-parser.h  parser.c  parser.h  print_ast.c  print_ast.h  test.c
src/lexer/: .lexer.c.swp  lexer.c
src/parser/: parser.c  parser.h  test.c
tests/: check.py  cmd.yaml  di.py  ess.py  test.py
tests/file_test/: case_hard  case_medium  case_simple  for_hard  for_medium.sh  for_simple.sh  if_hard  if_medium  if_simple  mix_easy  mix_hard.sh  mix_medium.sh  while_hard  while_medium.sh  while_simple.sh
